# AAlogo

./: AALogorizer.py  Example.ipynb  GetAA.py  LogoStyle.ini  LogoUtil.py  MANIFEST.in  README.md  StandardConfig.py  pyproject.toml
.ipynb_checkpoints/: AALogorizer-checkpoint.py  Example-checkpoint.ipynb  Expert vs DeepTMHMM-checkpoint.ipynb
aalogo/: AALogorizer.py  GetAA.py  LogoStyle.ini  LogoUtil.py  StandardConfig.py
aalogo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aalogo/.ipynb_checkpoints/: AALogorizer-checkpoint.py
example/: DeepTMHMM_sub.xlsx  Example.ipynb
example/.ipynb_checkpoints/: Example-checkpoint.ipynb
fonts/bold_AA_fonts/: aff_bold.afphoto
fonts/classic_AA_fonts/: classic_font.afphoto
fonts/modern_AA_fonts/: modern_bold.afphoto
grad_scales/: scales_hydrophobicity.xlsx
